spacing fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: flex-start;
+  padding-top: 3rem;
 }
 
 .footer {
